--- a/iFasting/iFasting/Resources/layout/Main.axml
+++ b/iFasting/iFasting/Resources/layout/Main.axml
@@ -3,5 +3,12 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    android:minWidth="25px"
+    android:minHeight="25px">
+    <Button
+        android:text="Calendar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/button1"
+        android:typeface="monospace" />
 </LinearLayout>
