adding manage fast

--- a/iFasting/iFasting/Resources/layout/Main.axml
+++ b/iFasting/iFasting/Resources/layout/Main.axml
@@ -11,4 +11,10 @@
         android:layout_height="wrap_content"
         android:id="@+id/button1"
         android:typeface="monospace" />
+    <Button
+        android:text="Manage Fast"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/button2"
+        android:typeface="monospace" />
 </LinearLayout>
